# z8kgcc-jan-19-2009

./: Makefile.in  Makefile.tpl  README  TODO.cpg  config.guess  config.sub  configure
bfd/: coff-z8k.c  configure  configure.in
binutils/: readelf.c
binutils/testsuite/binutils-all/: copy-3.d
gas/: configure.tgt  debug.c
gcc/: ChangeLog  ChangeLog.egcs  Makefile.in  NEWS  basic-block.h  c-common.c  c-decl.c  c-gperf.h  c-lex.c  c-parse.in  c-pragma.c  c-typeck.c  calls.c  cccp.c  cexp.y  collect2.c  combine.c  configure  cplus-dem.c  cpp.texi  cpplib.c  dbxout.c  dwarf2out.c  emit-rtl.c  except.c  explow.c  expmed.c  expr.c  expr.h  extend.texi  final.c  fixincludes  flags.h  flow.c  fold-const.c  function.c  function.h  gcc.1  gcc.c  gcc.texi  (+41 more)
gcc/config/: elfos.h  svr4.h
gcc/config/a29k/: a29k.h
gcc/config/alpha/: alpha.c  alpha.h  alpha.md
gcc/config/arm/: aout.h  arm.c  arm.h  arm.md  coff.h  lib1funcs.asm  lib1thumb.asm  pe.h  riscix.h  riscix1-1.h  semi.h  semiaof.h  t-bare  t-linux  t-semi  thumb.c  thumb.h
gcc/config/d10v/: d10v.c  d10v.h
gcc/config/i386/: i386.c  i386.h  i386.md  i386elf.h  sco5.h  x-go32  xm-cygwin32.h
gcc/config/i960/: i960.c  i960.h
gcc/config/m32r/: m32r.c  m32r.h  m32r.md
gcc/config/m68k/: m68020-elf.h  m68kelf.h  mot3300-crt0.S  mot3300Mcrt0.S  t-m68kelf
gcc/config/m88k/: m88k.h
gcc/config/mips/: elf.h  elf64.h  elfb4100.h  elfb4300.h  elfb5000.h  elfl4100.h  elfl4300.h  elfl5000.h  iris6.h  mips.c  mips.h  mips.md  r3900.h  t-biendian  t-vr4100  t-vr4300  t-vr5000
gcc/config/mn10300/: mn10300.h
gcc/config/pa/: pa-hpux11.h  pa.c  pa.h  pa.md
gcc/config/rs6000/: rs6000.c  rs6000.h  rs6000.md  sysv4.h  xm-sysv4.h
gcc/config/sh/: lib1funcs.asm  sh.c  sh.h  sh.md  t-sh
gcc/config/sparc/: liteelf.h  sp86x-aout.h  sp86x-elf.h  sparc.c  sparc.h  sparc.md  sysv4.h
gcc/config/v850/: lib1funcs.asm  t-v850  v850.c  v850.h  v850.md
gcc/config/z8k/: pcos.h  t-z8kpcos  z8k.c  z8k.h  z8k.md
gcc/cp/: ChangeLog  ChangeLog.egcs  Make-lang.in  Makefile.in  call.c  class.c  cp-tree.h  decl.c  decl2.c  exception.cc  friend.c  hash.h  init.c  lang-options.h  lang-specs.h  lex.c  method.c  new.cc  new1.cc  new2.cc  parse.y  repo.c  rtti.c  sig.c  tinfo2.cc  typeck.c  typeck2.c
gcc/cp/inc/: new
gcc/f/: config-lang.in
gcc/ginclude/: va-sh.h
gcc/objc/: Make-lang.in  config-lang.in  objc-act.c
gcc/testsuite/: ChangeLog
gcc/testsuite/g++.old-deja/g++.brendan/: complex1.C
gprof/: gmon_io.c
ld/: Makefile.in  configure.tgt
ld/emulparams/: z8kpcos.sh
ld/emultempl/: z8kpcos.em
ld/scripttempl/: z8000.sc  z8kpcos.sc
newlib/: configure.host
newlib/libc/include/: pthread.h  stdio.h
newlib/libc/include/machine/: time.h
newlib/libc/include/sys/: config.h  errno.h  fcntl.h  features.h  sched.h  types.h
newlib/libc/machine/powerpc/: vfprintf.c
newlib/libc/machine/sparc/: setjmp.S
newlib/libc/machine/z8k/: Makefile.am  setjmp.S  strcpy.S  strlen.S
newlib/libc/reent/: impure.c
newlib/libc/stdio/: flags.c  fread.c  stdio.c  vfprintf.c  vfscanf.c  wbuf.c
newlib/libc/stdlib/: getopt.c  mallocr.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/linux/: malloc.c  thread-m.h
newlib/libc/sys/linux/cmath/: math_private.h
newlib/libc/sys/linux/include/net/: if_tap.h  if_tapvar.h
newlib/libc/sys/linux/machine/i386/include/: endian.h
newlib/libc/sys/linux/net/: inet6_option_space.3  inet6_rthdr_space.3  inet_ntop.c  nslexer.c
newlib/libc/sys/rtems/include/: limits.h
newlib/libc/sys/rtems/machine/: limits.h  param.h
newlib/libc/sys/rtems/sys/: param.h  syslimits.h  utime.h
newlib/libc/sys/z8kpcos/: Makefile.am  Makefile.in  _callocr.c  _exit.S  _get_pcostime.S  _gettimeofday.c  _pcos_bclear.S  _pcos_bmove.S  _pcos_bset.S  _pcos_bwset.S  _pcos_checkvolume.S  _pcos_chgcur0.S  _pcos_chgcur1.S  _pcos_chgcur2.S  _pcos_chgcur3.S  _pcos_chgcur4.S  _pcos_chgcur5.S  _pcos_chgwindow.S  _pcos_cleartext.S  _pcos_close.S  _pcos_cls.S  _pcos_crlf.S  _pcos_ddirectory.S  _pcos_dgetlen.S  _pcos_dgetposition.S  _pcos_dhex.S  _pcos_dhexbyte.S  _pcos_dhexlong.S  _pcos_dispose.S  _pcos_dlong.S  _pcos_dnumw.S  _pcos_dremove.S  _pcos_drename.S  _pcos_dseek.S  _pcos_dstring.S  _pcos_eof.S  _pcos_extent_len.S  _pcos_getbyte.S  _pcos_getdate.S  _pcos_getstatusbyte.S  (+50 more)
newlib/libc/sys/z8kpcos/sys/: param.h  pcos.h
newlib/libc/sys/z8ksim/: Makefile.in  crt0.S
newlib/libm/common/: Makefile.am  Makefile.in
newlib/libm/math/: Makefile.am  Makefile.in
newlib/libm/mathfp/: Makefile.am  Makefile.in
opcodes/: z8k-dis.c
